--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "php": "^8.1",
         "darling/php-unit-test-utilities": "^1.0",
         "darling/php-text-types": "^1.0",
-        "darling/php-reflection-utilities": "^1.0"
+        "darling/php-reflection-utilities": "^1.0",
+        "darling/php-darling-dev-tools": "^1.0"
     },
     "autoload": {
         "psr-4": {
