--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "darling/php-unit-test-utilities": "^1.0",
         "darling/php-text-types": "^1.0",
         "darling/php-reflection-utilities": "^1.0",
-        "darling/php-darling-dev-tools": "^1.0"
+        "darling/php-darling-dev-tools": "^1.0",
+        "darling/php-mocking-utilities": "^1.0"
     },
     "autoload": {
         "psr-4": {
